# ImageProcex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imageread.cpp  imageread.h  main.cpp
examples/: main_example.cpp
src/: Image.cpp  Image.h  exposure.cpp  exposure.h  image.cpp  image.h  imageread.cpp  imageread.h  imageutils.h  imagewrite.cpp  imagewrite.h  intensity.cpp  intensity.h  transforms.cpp  transforms.h
